fix update on column visibility changes

--- a/src/styles/header/_toolbar.scss
+++ b/src/styles/header/_toolbar.scss
@@ -8,7 +8,6 @@
   display: flex;
   justify-content: center;
   padding: 3px;
-  overflow-x: hidden;
 
   > i {
     padding: 2px 4px;
